--- a/src/components/Cards/CardStyle.css
+++ b/src/components/Cards/CardStyle.css
@@ -2,12 +2,12 @@
     --primary-color: #e0c521;
   }
   
-  .card {
+  .cardd {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 150px;
-    height: 250px;
+    width: 300px;
+    height: 100px;
     border: 2px solid var(--primary-color);
     padding: 0.5rem 0.3rem;
     margin: 13px 10px;
