--- a/src/components/Cards/CardStyle.css
+++ b/src/components/Cards/CardStyle.css
@@ -6,11 +6,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 300px;
+    width: 200px;
     height: 100px;
     border: 2px solid var(--primary-color);
     padding: 0.5rem 0.3rem;
-    margin: 13px 10px;
+    margin: 25px 10px;
     position: relative;
     border-radius: 5px;
   }
@@ -18,6 +18,7 @@
   .card__title {
     font-weight: 400;
     text-align: center;
+    font-size: large;
   }
   
   .card__title .card__price {
