--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,5 @@
 .cart__container {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     margin-top: 12px;
